objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.Account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Account Name</relationshipLabel>
        <relationshipName>Partner_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Contact_ID__c</fullName>
        <formula>Partner_Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Partner_Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Partner Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Influence__c</fullName>
        <label>Partner Influence</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Partner__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Partner name from lead form</description>
        <label>Partner Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Oppty_NewLogo_Upsell_Amount__c</fullName>
        <inlineHelpText>We are using this to forecast Partner Opportunity New Logo or Upsell amount.</inlineHelpText>
        <label>Partner Oppty NewLogo/Upsell Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Oppty_Type__c</fullName>
        <label>Partner Oppty Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Partner Purchase</fullName>
                </value>
                <value>
                    <fullName>Reseller</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Oppty__c</fullName>
        <description>To identify Partner Opportunities.</description>
        <formula>IF( AND( ISPICKVAL(Partner_Sourced__c, &apos;Partner Team Attributed&apos;), OR( ISPICKVAL(Partner_Oppty_Type__c, &apos;Reseller&apos;), ISPICKVAL(Partner_Oppty_Type__c, &apos;Direct Partner Purchase&apos;))),  &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Partner Sourced Direct Purchase or Reseller Opportunities.</inlineHelpText>
        <label>Partner Oppty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Referral_Fee__c</fullName>
        <description>Referral Percentage * Total ARR Amount.</description>
        <formula>Referral_Percentage__c  *  Total_ARR_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Referral Percentage * Total ARR Amount.</inlineHelpText>
        <label>Partner Referral Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Sourced__c</fullName>
        <label>Opportunity Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing Attributed</fullName>
                </value>
                <value>
                    <fullName>Partner Team Attributed</fullName>
                </value>
                <value>
                    <fullName>Rep Attributed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner Involved?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Expected__c</fullName>
        <label>Payment Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Note__c</fullName>
        <label>Payment Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_method__c</fullName>
        <label>Payment method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wire Transfer</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pendo_NPS_Score__c</fullName>
        <label>Pendo_NPS Score</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_ARR_Value__c</fullName>
        <description>This field was created at Bennett&apos;s request. AE&apos;s wanted a place to record what they think the upsell/downsell amount will be.</description>
        <inlineHelpText>Enter the ARR upsell or downsell amount expected when this opportunity is won.</inlineHelpText>
        <label>Pipeline ARR Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plan_Details__c</fullName>
        <inlineHelpText>This is to understand whether its (Enterprise, Standard, Professional)</inlineHelpText>
        <label>Plan Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Playground_POC_Engineer__c</fullName>
        <label>Playground/POC Engineer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playground_Set__c</fullName>
        <label>Playground Set</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Playground Set 01</fullName>
                </value>
                <value>
                    <fullName>Playground Set 02</fullName>
                </value>
                <value>
                    <fullName>Playground Set 03</fullName>
                </value>
                <value>
                    <fullName>Playground Set 04</fullName>
                </value>
                <value>
                    <fullName>Playground Set 05</fullName>
                </value>
                <value>
                    <fullName>Playground Set 06</fullName>
                </value>
                <value>
                    <fullName>Playground Set 07</fullName>
                </value>
                <value>
                    <fullName>Playground Set 08</fullName>
                </value>
                <value>
                    <fullName>Playground Set 09</fullName>
                </value>
                <value>
                    <fullName>Playground Set 10</fullName>
                </value>
                <value>
                    <fullName>Playground Set 11</fullName>
                </value>
                <value>
                    <fullName>Playground Set 12</fullName>
                </value>
                <value>
                    <fullName>Playground Set 13</fullName>
                </value>
                <value>
                    <fullName>Playground Set 14</fullName>
                </value>
                <value>
                    <fullName>Playground Set 15</fullName>
                </value>
                <value>
                    <fullName>Playground Set 16</fullName>
                </value>
                <value>
                    <fullName>Playground Set 17</fullName>
                </value>
                <value>
                    <fullName>Playground Set 18</fullName>
                </value>
                <value>
                    <fullName>Playground Set 19</fullName>
                </value>
                <value>
                    <fullName>Playground Set 20</fullName>
                </value>
                <value>
                    <fullName>Playground Set 21</fullName>
                </value>
                <value>
                    <fullName>Playground Set 22</fullName>
                </value>
                <value>
                    <fullName>Playground Set 23</fullName>
                </value>
                <value>
                    <fullName>Playground Set 24</fullName>
                </value>
                <value>
                    <fullName>Playground Set 25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_SalesEngineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Success Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Premium_Support__c</fullName>
        <inlineHelpText>Premium Customer (yes/ no) ?</inlineHelpText>
        <label>Premium Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>Opportunity.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Subscription_Start_Date__c</field>
                <operation>greaterThan</operation>
                <valueField>Opportunity.Subscription_Start_Date__c</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>equals</operation>
                <value>Closed Won</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Previous Opportunity)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_AR_Admin__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary AR Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Campaign_from_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Campaign from Lead</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Time_Zone__c</fullName>
        <description>Time zone support should consider for this customer.</description>
        <inlineHelpText>Time zone support should consider for this customer.</inlineHelpText>
        <label>Primary Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Time_Zone</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PriorStage__c</fullName>
        <description>Captures the previous stage value</description>
        <label>PriorStage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProServe_Amount__c</fullName>
        <inlineHelpText>Non-recurring Revenue.Excluding One Time Discount.</inlineHelpText>
        <label>NRR Amount</label>
        <summarizedField>OpportunityLineItem.Total_Price__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Recurring_Revenue__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Probability_Adjusted_ARR_Amount__c</fullName>
        <formula>Probability *  Total_ARR_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability Adjusted ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability_Adjusted_Opportunity_Amount__c</fullName>
        <formula>Probability  *  Opportunity_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability Adjusted Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Procurement_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procurement Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Procurement_Contact_ID__c</fullName>
        <formula>Procurement_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procurement Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procurement_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Procurement Contact</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Partner_Contact__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Procurement Contact)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>Implementation Services</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Vault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Services_hours__c</fullName>
        <label>Professional Services (# hours)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Receipted_On__c</fullName>
        <label>Receipted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referral_Percentage__c</fullName>
        <description>Partner Contractual Referral Percentage</description>
        <inlineHelpText>Partner Contractual Referral Percentage</inlineHelpText>
        <label>Referral Percentage</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_ARR_Amount__c</fullName>
        <inlineHelpText>We are using this to forecast opportunity ARR amount for renewals opportunities.</inlineHelpText>
        <label>Renewal ARR Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Date_Cntrct_End_Date_90_Days__c</fullName>
        <formula>Contract_End_Date__c  - 90</formula>
        <label>Renewal Date (Cntrct End Date - 90 Days)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <formula>Subscription_End_Date__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_No_of_subs__c</fullName>
        <label>Renewal_No_of_subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity where this opportunity will be or has been renewed. This field is necessary to track when a series of opportunities moves from one account to another due to a partnership or purchase.</description>
        <inlineHelpText>Opportunity where this opportunity will be or has been renewed. This field is necessary to track when a series of opportunities moves from one account to another due to a partnership or purchase.</inlineHelpText>
        <label>Renewal Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Renewal Opportunity)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Subs__c</fullName>
        <formula>IF(INCLUDES(Opportunity_Type_New_Renewal_Upsell__c ,&quot;Renewal&quot;),
( No_of_Recurring_Products__c ),0)</formula>
        <inlineHelpText>Subscriptions Count of Recurring Revenue on Renewal</inlineHelpText>
        <label>Renewal Subs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only Renewals would be applicable here</inlineHelpText>
        <label>Renewal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reseller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reseller</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Reseller)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_End_Month__c</fullName>
        <description>First day of last month to recognize revenue for subscription. The goal is to allocate revenue for a 12 month contract that starts mid-month across 12 months rather than 13.</description>
        <formula>ADDMONTHS(Revenue_Start_Month__c, IF(VALUE(of_Months_for_Subs_Activation__c)-1&gt;0,VALUE(of_Months_for_Subs_Activation__c)-1,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue End Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_Start_Month__c</fullName>
        <description>First day of month where we will start recognizing revenue for a subscription. Having a revenue start and end date will ensure 12 month contracts that start mid month are allocated over 12 months rather than 13.</description>
        <formula>DATE(YEAR(Subscription_Start_Date__c),MONTH(Subscription_Start_Date__c),1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Start Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDR__c</fullName>
        <label>SDR</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Partner_Sourced__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Amrita Sen</fullName>
                </value>
                <value>
                    <fullName>Andrew Boyles</fullName>
                </value>
                <value>
                    <fullName>Anilreddy Chada</fullName>
                </value>
                <value>
                    <fullName>Arvind Tripathy</fullName>
                </value>
                <value>
                    <fullName>Belinda Trevor</fullName>
                </value>
                <value>
                    <fullName>Breanne Mullen</fullName>
                </value>
                <value>
                    <fullName>Daniel Cioffari</fullName>
                </value>
                <value>
                    <fullName>Denchaline Ecaillat</fullName>
                </value>
                <value>
                    <fullName>Drew McMillan</fullName>
                </value>
                <value>
                    <fullName>Hunter Traffica</fullName>
                </value>
                <value>
                    <fullName>Kainaz Dara Patel</fullName>
                </value>
                <value>
                    <fullName>Krishna Chaitanya</fullName>
                </value>
                <value>
                    <fullName>Luke Cartwright</fullName>
                </value>
                <value>
                    <fullName>No SDR Involved</fullName>
                </value>
                <value>
                    <fullName>Raynold Paul</fullName>
                </value>
                <value>
                    <fullName>Ryan Watson</fullName>
                </value>
                <value>
                    <fullName>Susan Michael</fullName>
                </value>
                <value>
                    <fullName>Swati Gupta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSO__c</fullName>
        <label>SSO</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Okta</fullName>
                </value>
                <value>
                    <fullName>PingFederate</fullName>
                </value>
                <value>
                    <fullName>Active Directory (ADFS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SaaS_Foundation_Items__c</fullName>
        <description>Summed quantity of products with family SaaS Foundation.</description>
        <label>SaaS Foundation Items</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductFamily__c</field>
            <operation>equals</operation>
            <value>SaaS Foundation</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_s_Activity_Comments__c</fullName>
        <description>Free text field to enter any notes or comments.</description>
        <label>Sales Rep&apos;s Activity Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Security_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Security Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Hosted_Foundation_Items__c</fullName>
        <description>Summed quantity of products with family Self-Hosted Foundation.</description>
        <label>Self-Hosted Foundation Items</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductFamily__c</field>
            <operation>equals</operation>
            <value>Self-Hosted Foundation</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Self_Hosted_License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On Prem Subscription</label>
        <referenceTo>Self_Hosted_License__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_ARR__c</fullName>
        <formula>(Total_Price_Recurring_Service_Products__c/IF(Value(of_Months_for_Subs_Activation__c)&gt;0,Value(of_Months_for_Subs_Activation__c),12))*12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Services_ARR__c</fullName>
        <description>Annual Recurring Revenue (ARR) from Professional Services product subscriptions.</description>
        <inlineHelpText>Annual Recurring Revenue (ARR) from Professional Services product subscriptions.</inlineHelpText>
        <label>Services ARR</label>
        <summarizedField>OpportunityLineItem.Annual_Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Recurring_Revenue__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OpportunityLineItem.ProductFamily__c</field>
            <operation>contains</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Special_Referral_Terms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the Opportunity Referral Percentage is different from the Partner Account Referral Percentage.</description>
        <inlineHelpText>Check this box if the Opportunity Referral Percentage is different from the Partner Account Referral Percentage.</inlineHelpText>
        <label>Special Referral Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage_Date__c</fullName>
        <label>Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_Negotiation_Set_Date__c</fullName>
        <label>Stage &quot;Negotiation&quot; Set Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Playground_Set_Date__c</fullName>
        <label>Stage &quot;Playground&quot; Set Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Proposal_Set_Date__c</fullName>
        <label>Stage &quot;Proposal&quot; Set Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stage_Trial_completed_Set_Date__c</fullName>
        <label>Stage &quot;Trial completed&quot; Set Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Static_Code_Analysis__c</fullName>
        <label>Static Code Analysis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Apex PMD</fullName>
                </value>
                <value>
                    <fullName>CheckMarx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On-Hold</fullName>
                </value>
                <value>
                    <fullName>To Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Stage_Prob__c</fullName>
        <inlineHelpText>Probability % is auto calculated here</inlineHelpText>
        <label>Sub Stage Probability %</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Sub_Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>35%</fullName>
                    <default>true</default>
                    <label>35%</label>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>45%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>55%</fullName>
                </value>
                <value>
                    <fullName>56%</fullName>
                </value>
                <value>
                    <fullName>57%</fullName>
                </value>
                <value>
                    <fullName>65%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>85%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Stage_Probability__c</fullName>
        <formula>CASE(Sub_Stage__c ,
&quot;Schedule Planning&quot;,0.35,
&quot;Scoping&quot;,0.4,
&quot;Free POC&quot;,0.5,
&quot;Fee POC&quot;,0.55,
&quot;Trial Initiated&quot;, 0.57,
&quot;Trail Expired&quot;, 0.56,
&quot;Proposal&quot;, 0.65,
&quot;Negotiate&quot;, 0.70,
&quot;Procurement&quot;, 0.80,
&quot;Procurement Cont&quot;, 0.85,
&quot;Unresponsive&quot;, 0.40,
&quot;Professinal Services Sub&quot; ,NULL,

NULL

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Stage Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>